# cagent

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
include/: ca_agent.h  ca_cli.h  ca_command_tools.h  ca_config.h  ca_edit_tracking.h  ca_file_tools.h  ca_git_tools.h  ca_http.h  ca_json.h  ca_limits.h  ca_llm.h  ca_payload.h  ca_permission.h  ca_platform.h  ca_process.h  ca_project.h  ca_status.h  ca_tool.h
src/: main.c
src/agent/: action_parser.c  agent.c  edit_tracking.c  prompt_builder.c
src/cli/: repl.c
src/config/: config.c  env.c
src/core/: payload.c
src/json/: json.c
src/llm/: fake_provider.c  http_client.c  openai_compat_provider.c
src/permission/: confirm_prompt.c  permission.c
src/platform/: console.c  process_posix.c  process_win32.c  windows_args.c
src/project/: ignore_rules.c  project_detector.c  project_indexer.c
src/tool/: builtin_tools.c  tool_executor.c  tool_registry.c
src/tools/: command_tools.c  diff_tools.c  edit_tools.c  file_tools.c  git_tools.c  patch_tools.c  write_tools.c
